# mlaude

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SOUL.md  TODO.md  pyproject.toml  qa_flaws_log.md
.github/workflows/: ci.yml
evals/: README.md
evals/scenarios/: research-harness.json
frontend/: eslint.config.js  index.html  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/files/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/chat/: chat-workspace.tsx  input-bar.tsx  message-list.tsx  runs-panel.tsx  source-sidebar.tsx  welcome-state.tsx
frontend/components/files/: file-badge.tsx  library-manager.tsx
frontend/components/settings/: model-settings.tsx
frontend/components/sidebar/: app-sidebar.tsx
frontend/components/ui/: workspace-chrome.tsx
frontend/lib/: api.ts  chat-state.ts  types.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/diagnostics/: types.ts  (+1 more)
frontend/tests/: workspace.spec.ts
knowledge/: README.md
knowledge/about/: communication_style.md  master.example.md  profile.md
knowledge/interests/: history_politics.md  philosophy_science.md  physics_astrophysics.md
plans/: mlaude-behavioral-identity-rag-v2.md
scripts/: qa_agent.py  run-backend-e2e.sh
src/mlaude/: __main__.py  agent.py  banner.py  browser_mcp.py  capability_router.py  chat_ui.py  cli.py  commands.py  config.py  database.py  db.py  display.py  file_service.py  llm.py  memory.py  model_tools.py  models.py  observer.py  rag.py  retrieval.py  runtime.py  safety.py  server.py  settings.py  skin_engine.py  state.py  tools_base.py  toolsets.py
static/: index.html  manifest.json  sw.js
tests/: agent_tester.py  test_agent.py  test_agent_router_persistence.py  test_browser_mcp.py  test_browser_tools.py  test_capability_router.py  test_chat_ui.py  test_cli_tui_behavior.py  test_delegate_tool.py  test_hermes_parity_slice.py  test_phases_5_10.py  test_providers.py  test_registry.py  test_retrieval.py  test_server_helpers.py  test_tools.py  test_tui_gateway_server.py  test_tui_launcher.py  test_web_search.py  test_web_tools.py
ui-tui/: package-lock.json  package.json  tsconfig.json
ui-tui/src/: app.tsx  banner.ts  gateway-client.js  index.tsx  state.js  theme.ts
ui-tui/tests/: state.test.js
(+63 files in other folders)
