[project]
name = "mlaude"
version = "0.2.0"
description = "Personal AI agent — local, private, minimal"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "duckduckgo-search>=6.0.0",
    "chromadb>=0.5.0",
    "tavily-python>=0.5.0",
]

[project.scripts]
mlaude = "mlaude.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlaude"]
